2010-11-26 0.78 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Version 0.77 broke MacOS exported CSV files with only \r

2010-10-23 0.77 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Internals now use warn () instead of (void)fprintf (stderr, ...)
      Now the test in t/80_diag also passes on Windows
    * Better parsing for eol = \r and set as such (RT#61525)
    * Workaround for AIX cpp bug (RT#62388, Jan Dubois)

2010-10-09 0.76 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Windows doesn't support STDERR redirection as used in t/80_diag

2010-10-05 0.75 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Fixed undefinedness of $\ in print (RT#61880)

2010-09-29 0.74 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Spelling fixes
    * Real eol support for parsing streams (beyond \n, \r and \r\n)
    * Clarify doc for always_quote to not quote undef fields
    * Clarify UTF8 process for print () and combine ()

2010-05-03 0.73 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Improve date conversion in examples/csv2xls
      new option -D allows column selection for date conversions
    * Tested under perl-5.12.0 (and 21 other versions of perl)
    * Added a note about EBCDIC data files
    * Test suite is now safe for parallel test (prove --shuffle -j6)

2010-03-16 0.72 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Introduce quote_null attribute (RT#55200)
    * examples/csv-check can be used for Text::CSV_PP
    * examples/csv-check more options for sep_, escape_ and quote_char
    * examples/csv2xls more options for sep_, escape_ and quote_char
    * examples/csv2xls added auto_diag and verbosity
    * Dropped YAML spec to 1.0

2010-02-15 0.71 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Upped copyright to 2010
    * Prevent double encoding: make Text::CSV_XS streams behave just
      like perl would (thanks ikegami for the test cases)
    * Text::CSV_XS->error_diag () in void context now warns instead of
      doing nothing