@@ -1,3 +1,8 @@
+2010-11-26 0.79 - H.Merijn Brand   <h.m.brand@xs4all.nl>
+    * Use correct type for STRLEN (HP-UX/PA-RISC/32)
+    * More code coverage
+    * EOF unreliable when line-end missing at eof
+
 2010-11-26 0.78 - H.Merijn Brand   <h.m.brand@xs4all.nl>
     * Version 0.77 broke MacOS exported CSV files with only \r
 
